# VocaPitchDetection

./: CMakeLists.txt  voca_pitch_detection.cpp
src/: CMakeLists.txt  voca_pitch_detection.cpp
testing_results/: Actual1.csv  Actual2.csv
